--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
-# ===============================
-# = DATA SOURCE
-# ===============================
 
-# Set here configurations for the database connection
+# make uncomment when you want to use mysql
+# spring.profiles.active=prod
 
-# Connection url for the database "mobilapi"
-spring.datasource.url = jdbc:mysql://localhost:3306/mobilapi
-
-# Username and password
-spring.datasource.username = root
-spring.datasource.password = 12345
+# default active profile dev with h2 db
+spring.profiles.active=dev
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -34,12 +28,13 @@ spring.jpa.hibernate.ddl-auto = create
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
 # Initialization
 spring.datasource.data=classpath:/data/data.sql
 
-auth.success.url=/auth/success
-auth.failure.url=/auth/failure
+# cron job values
+
+auth.cron.session.timeout=0 2 * * * *
+auth.token.timeout.interval=2
