--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,15 @@
 
-# make uncomment when you want to use mysql
-# spring.profiles.active=prod
 
-# default active profile dev with h2 db
-spring.profiles.active=dev
+#mongodb configuration
 
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#connection url :mongodb://root:12345@ds011442.mlab.com:11442/mobilapi
 
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
+mongodb.host = ds011442.mlab.com
+mongodb.port = 11442
+mongodb.db.name = mobilapi
+mongodb.userName = root
+mongodb.password = 12345
 
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager).
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-spring.jpa.open-in-view = true
-
-# Hibernate ddl auto (create, create-drop, update): with "update" the database
-# schema will be automatically updated accordingly to java entities found in
-# the project
-spring.jpa.hibernate.ddl-auto = create
-
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
-
-# Initialization
-spring.datasource.data=classpath:/data/data.sql
 
 # cron job values
 
